<resources>
    <string name="app_name">Minimental</string>
    <string name="user_name">Enter Name</string>
    <string name="title_name">Cognitive\nAssesment</string>
    <string name="button_next">Next</string>
    <string name="user_password">Enter password</string>
    <string name="required">Required</string>
    <string name="missingdetails">Missing Details</string>
    <string name="country">country</string>
    <string name="city">city</string>
    <string name="address">address</string>
    <string name="floor">floor</string>
    <string name="area">area</string>
    <string name="center">Center</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="north">North</string>
    <string name="title_question_title_name">Short Term Memory</string>
    <string name="second_question_textview_name">Click the button when you are ready, try to remember the 3 objects</string>
    <string name="second_question_textview2_name">Click on the microphone and repeat the object you heard in the text</string>
    <string name="choose_third_question_title">Choose Third Question</string>
    <string name="choose_third_question_textview_name">Now a simple and complete thinking exercise is done and you can do arithmetic You can also do a spelling exercise, please click on your choose</string>
    <string name="math_version_name">Math Version</string>
    <string name="answer_math_voice">click on the microphone for answer</string>
    <string name="Button_finish_answer_text">Click here when finished answer</string>
    <string name="textView_math_version">100</string>
    <string name="textView_spellig_version_word">Table</string>
    <string name="textView_spellig_version_textView2">Press on the microphne to start spelling</string>
    <string name="spelling_version_name">Spelling Version</string>
    <string name="repeat_sentence_string_title">Repeat sentence</string>
    <string name="textView_repeat_sentence_string">A random sentence need to repeat</string>
    <string name="textView2_repeat_sentence_string">Click on the microphone to repeat the sentence</string>
    <string name="title_question_title_name4">Fourth Question</string>
    <string name="fourth_question_textview_name">please repeat the 3 object from second question</string>
    <string name="fifth_question_name">Fifth Question</string>
    <string name="textView_fifth_question">please write what you see in the picture</string>
    <string name="title_question_title_name6">Sixth question</string >
    <string name="sixth_question_textview_name">An example of sentence that appears here</string>
    <string name="six_question_textview2_name">Repeate the sentence</string>
    <string name="eighth_question_title">Drag And Drop</string>
    <string name="eighth_question_instructions">Put the black circle in the red square</string>
    <string name="seventh_question_title_string">Seventh Question</string>
    <string name="choose_information_question_title">User Details</string>
    <string name="choose_first_question_title">Time and Place</string>
    <string name="enter_currentDay">What is the current day?</string>
    <string name="enter_answer">Enter answer</string>
    <string name="enter_currentMonth">What is the current month?</string>
    <string name="enter_currentDate">What day of the month are we?</string>
    <string name="enter_currentYear">What is the current year?</string>
    <string name="enter_currentSeason">What is the current season?</string>
    <string name="enter_currentCountry">In what country do you live?</string>
    <string name="enter_currentCity">In what city do you live?</string>
    <string name="enter_currentStreet">In which street do you live?</string>
    <string name="enter_currentFloor">On what floor do you live?</string>
    <string name="enter_currentArea">In what area do you live?</string>
    <string name="login">LOGIN</string>
    <string name="listen">listen</string>
    <string name="speak">SPEAK</string>
    <string name="enter_a_sentence">Write a sentence of at least three words</string>
    <string name="write_the_sentence_here">Write the sentence here</string>
    <string name="explain_math_text_view">Make a subtraction of 7 at a time</string>
    <string name="file_textview_name">Click on the pluse button for add picture</string>
    <string name="title_question_fileFragment_textView">Add Pictures</string>
    <string name="take_photo">Take photo</string>/>
    <string name="name_picture">Picture</string>
    <string name="eighth_question_instructions2">Put the yellow circle in the red square</string>
    <string name="eighth_question_instructions3">put the blue circle in the red square</string>
    <string name="eighth_question_instructions4">put the green circle in the red square</string>
    <string name="textView_tenth">please copy the picture</string>/>
    <string name="speaker_button_title">Speaker Button</string>/>
    <string name="mic_button_title">Microphone Button</string>/>
    <string name="speaker_button_desc">Click here for listen</string>/>
    <string name="mic_button_desc">Click here for speak</string>
    <string name="tenth_question">Tenth Question</string>
    <string name="hospital_address">What is the name for your current place</string>
    <string name="hospital_floor">in what floor your room is?</string>
    <string name="ninth_question">Ninth Question</string>
    <string name="confirm_word">Confirm Word</string>
    <string name="feedback_here">Feedback Here</string>
    <string name="click_on_the_microphone_for_answer">Click on the microphone for answer</string>
    <string name="Correct_fourthQuestion">Correct</string>
    <string name="VeryClose_fourthQuestion">Very Close</string>
    <string name="Close_fourthQuestion">Close</string>
    <string name="InCorrect_fourthQuestion">TryAgain</string>
    <string name="Enter_ForthQuestion">Enter a object</string>
    <string name="ThreeWord_secondQuestion">please enter 3 word!!</string>
    <string name="no_permission">Doesn\'t have permission please talk to your doctor to start a test</string>
    <string name="Wrong_username">Wrong username or password try again</string>
    <string name="Enter_email">Email Address and Password Must Be Entered</string>
    <string name="missing_details_textView2">This page will be filled by a helper</string>
    <string name="start_test_string">To start the test click here</string>
    <string name="you_can_added_picture_of_draft_pages_the_end_of_the_test">It is possible to use draft pages and add them as pictures at the end of the test</string>
    <string name="notice">Notice:</string>
    />

</resources>