<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_question_title6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/title_question_title_name6"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/six_question_textview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/sixth_question_textview_name"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/repeat_sentence_speaker"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_margin="25dp"
                    android:drawableEnd="@drawable/ic_speaker"
                    android:gravity="center"
                    android:text="@string/listen"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/six_question_textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/six_question_textview2_name"
                    android:textColorHint="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/image_of_microphone"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_margin="25dp"
                    android:drawableEnd="@drawable/ic_microphone"
                    android:gravity="center"
                    android:text="@string/speak"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <Button
                    android:id="@+id/next_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:hint="@string/button_next"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>