<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/title_question_title_name"
                android:textColorHint="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/second_question_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/second_question_textview_name"
                    android:textColorHint="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/image_of_speaker"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_margin="25dp"
                    android:drawableEnd="@drawable/ic_speaker"
                    android:gravity="center"
                    android:text="@string/listen"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/second_question_textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/second_question_textview2_name"
                    android:textColorHint="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:text="check"
                    android:textColor="@color/black"
                    android:id="@+id/check_txt"/>



                <ImageButton
                    android:id="@+id/image_of_microphone"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_microphone2"
                    android:gravity="center"
                    android:background="@null"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <Button
                    android:id="@+id/next_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:hint="@string/button_next"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>