<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/repeat_sentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/repeat_sentence_string_title"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/spelling_version_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:drawableEnd="@drawable/ic_baseline_volume_up_24"
                    android:text="@string/textView_repeat_sentence_string"
                    android:textSize="40dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/image_of_microphone"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:gravity="center"
                    android:src="@drawable/ic_microphone2"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/repeat_sentence_textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="35dp"
                    android:gravity="center"
                    android:text="@string/textView2_repeat_sentence_string"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <Button
                    android:id="@+id/next_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:hint="@string/button_next"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>